2007-01:28 3.1 Julien Devemy
	* Release a good tarball
	* Change the configure.ac genmon version

2007-01-09 Nick Schermer
	* Fixed build problems with as-needed (Bug 2722)

2006-10-13 3.0 Julien Devemy
	* Add French translation
	* Add some patches
	* Add some test to avoid buffer overflow

2006-07-14 2.0 Julien Devemy
	* New version managing XML tags for image, bar, tooltip and click

2004-11-01 1.1 Roger Seguin
	* Fixed bug related to memory dynamic allocation
	* Added contribution scripts

2004-09-09 1.0 Roger Seguin
	* Xfce Goodies Release

2004-09-01 0.4 Roger Seguin
	* Reset font after panel orientation change

2004-08-28 0.3 Roger Seguin
	* Improved spawning process

2004-08-28 0.2 Roger Seguin
	* Added font selector for resulting string displayed in panel

2004-08-28 0.1 Roger Seguin
	* Initial release